src/objects/Apttus_CMConfig__AgreementIncentiveBenefitData__c.object
<CustomObject>
    <description>Represents a single benefit data row associated with the incentive benefit for the agreement</description>
    <fields>
        <fullName>Apttus_CMConfig__AgreementId__c</fullName>
        <description>ID of the associated agreement</description>
        <inlineHelpText>ID of the associated agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Incentive Benefit Data</relationshipLabel>
        <relationshipName>AgreementIncentiveBenefitData</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BeneficiaryId__c</fullName>
        <description>ID of the beneficiary associated with the benefit</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>ID of the beneficiary associated with the benefit</inlineHelpText>
        <label>Beneficiary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BeneficiaryType__c</fullName>
        <description>The beneficiary type</description>
        <inlineHelpText>The beneficiary type</inlineHelpText>
        <label>Beneficiary Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__BenefitProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the benefit product associated with the benefit</description>
        <inlineHelpText>ID of the criteria product associated with the benefit</inlineHelpText>
        <label>Benefit Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agreement Incentive Benefit Data (Benefit Product)</relationshipLabel>
        <relationshipName>AgmtIncentiveBenefitDataBenefitProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__CriteriaProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the criteria product associated with the benefit</description>
        <inlineHelpText>ID of the criteria product associated with the benefit</inlineHelpText>
        <label>Criteria Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agreement Incentive Benefit Data (Criteria Product)</relationshipLabel>
        <relationshipName>AgmtIncentiveBenefitDataCriteriaProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__GroupByValues__c</fullName>
        <description>The group by field values</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>The group by field values</inlineHelpText>
        <label>Group By Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__IncentiveId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated incentive</description>
        <inlineHelpText>ID of the associated incentive</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Agreement Incentive Benefit Data</relationshipLabel>
        <relationshipName>AgreementIncentiveBenefitData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PeriodEndDate__c</fullName>
        <description>The rollup period end date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The rollup period end date</inlineHelpText>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PeriodStartDate__c</fullName>
        <description>The rollup period start date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The rollup period start date</inlineHelpText>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__RollupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated rollup</description>
        <inlineHelpText>ID of the associated rollup</inlineHelpText>
        <label>Rollup</label>
        <referenceTo>Apttus_Config2__SearchFilter__c</referenceTo>
        <relationshipLabel>Agreement Incentive Benefit Data</relationshipLabel>
        <relationshipName>AgreementIncentiveBenefitData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__SoldToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ID of the sold to account</description>
        <inlineHelpText>The ID of the sold to account</inlineHelpText>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Incentive Benefit Data</relationshipLabel>
        <relationshipName>AgreementIncentiveBenefitData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__UsedBenefitAmount__c</fullName>
        <description>The benefit used on amount</description>
        <inlineHelpText>The benefit used on amount</inlineHelpText>
        <label>Used Benefit Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__UsedBenefitQuantity__c</fullName>
        <description>The benefit used on quantity</description>
        <inlineHelpText>The benefit used on quantity</inlineHelpText>
        <label>Used Benefit Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>Agreement Incentive Benefit Data</label>
    <nameField>
        <displayFormat>ABD-{00000000}</displayFormat>
        <label>Data Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Incentive Benefit Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>